# RustSigGen

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
binja-rust-plugin/: Cargo.toml  __init__.py
binja-rust-plugin/src/: lib.rs
ida-rust-plugin/: Cargo.toml  ida-plugin.json  ida-rust-plugin.cfg  ida-rust-plugin.py
ida-rust-plugin/src/: lib.rs
src/: caching_http.rs  crate_sigs.rs  ida.rs  lib.rs  main.rs  std_sigs.rs
