[package]
name = "signature_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
object = "0.36.0"
octocrab = "0.38.0"
regex = "1.10.4"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tar = "0.4.41"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
xz2 = "0.1.7"

[workspace]
members = ["binja-rust-plugin", "ida-rust-plugin"]
