[package]
name = "rust-sig-gen"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "env"] }
crates-index = "3.1.0"
crates_io_api = "0.11.0"
dirs = "5.0.1"
env_logger = "0.11.3"
flate2 = "1.0.32"
gix = { version = "0.68.0", features = ["blocking-http-transport-curl"] }
glob = "0.3.1"
guppy = "0.17.7"
hex = "0.4.3"
http = "1.1.0"
indoc = "2.0.5"
log = "0.4.21"
object = "0.36.0"
octocrab = "0.42.1"
regex = "1.10.4"
# `native-tls-alpn` feature is required for successful negotation of HTTP/2 (https://index.crates.io)
reqwest = { version = "0.12.4", features = ["native-tls-alpn", "gzip"] }
rustc-demangle = "0.1.24"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tar = "0.4.41"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
xz2 = "0.1.7"

# Always optimize dependencies (e.g. gix is much faster with this)
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["binja-rust-plugin", "ida-rust-plugin"]
