[package]
name = "binja-rust-plugin" # TODO: Find a better name...
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = [
    "anyhow",
    "experimental-async",
    "extension-module",
] }
pyo3-log = "0.10.0"
tokio = "1.38.0"

signature_generator = { path = ".." }
